--- a/fast2sms/views/index.ejs
+++ b/fast2sms/views/index.ejs
@@ -10,7 +10,7 @@
     <form action="/sendMessage" method="post">
         <div class="form-group">
             <label for="number"> Enter Number</label>
-            <input type="text" id="number" name="number">
+            <input type="tel" id="number" name="number">
         </div>
 
         <div class="form-group">
